refactor: move recipe routing and dependency resolver to domain